@@ -8,6 +8,7 @@ Changes:
 - Revert to old CHS.
 - Change geometry to CHS=x,255,63 of embedded image.
 - Change php to php-cgi.
+- Set webgui codeset UTF-8.
 - v9.6 config is forever marked as a blacklist.
 - Load zfs.ko and opensolaris.ko from loader.
 - Use AES-NI in geli by default.
